--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "debug": "~2.6.3",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.0.1",
+    "log4js": "^3.0.6",
     "morgan": "^1.9.1",
     "pg": "^7.3.0",
     "postgrator": "^2.10.2",
